--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,9 @@
 asgiref==3.10.0
-blinker==1.9.0
-certifi==2025.10.5
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
 Django==5.2.7
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
-requests==2.32.5
+setuptools==78.1.1
 sqlparse==0.5.3
-tzdata==2025.2
-urllib3==2.5.0
-Werkzeug==3.1.3
+wheel==0.45.1
