--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.10.0
 Django==5.2.7
 django-environ==0.12.0
+django-pwned-passwords==4.1.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 psycopg2-binary==2.9.10
