--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+anyio==4.11.0
 asgiref==3.10.0
+certifi==2025.10.5
 Django==5.2.7
 django-environ==0.12.0
 django-pwned-passwords==4.1.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
 psycopg2-binary==2.9.10
+pwned-passwords-django==5.2.0
 PyJWT==2.10.1
 setuptools==78.1.1
+sniffio==1.3.1
 sqlparse==0.5.3
 tzdata==2025.2
 wheel==0.45.1
