--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "node --localstorage-file=/tmp/node-localstorage.json ./node_modules/vite/bin/vite.js",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -16,27 +16,27 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.22",
+    "pinia": "^3.0.4",
+    "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.18.11",
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.37.0",
-    "eslint-plugin-vue": "~10.5.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-vue": "~10.5.1",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
-    "typescript": "~5.9.0",
-    "vite": "^7.1.11",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.2",
     "vite-plugin-vue-devtools": "^8.0.3",
-    "vue-tsc": "^3.1.1"
+    "vue-tsc": "^3.1.3"
   }
 }
