--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "node --localstorage-file=/tmp/node-localstorage.json ./node_modules/vite/bin/vite.js",
+    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
