--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
     ports:
       - "25000:5432"
+  redis:
+    image: "redis:alpine"
+    container_name: security_platform_redis
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
