--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+amqp==5.3.1
 anyio==4.11.0
 asgiref==3.10.0
+billiard==4.2.3
+celery==5.5.3
 certifi==2025.10.5
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
 Django==5.2.7
 django-axes==8.0.0
 django-cors-headers==4.9.0
@@ -12,11 +20,19 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+kombu==5.5.4
+packaging==25.0
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
 pwned-passwords-django==5.2.0
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+redis==7.1.0
 setuptools==78.1.1
+six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
 tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.14
 wheel==0.45.1
