--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.10.0
 billiard==4.2.3
 celery==5.5.3
 certifi==2025.10.5
+charset-normalizer==3.4.4
 click==8.3.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -33,6 +34,7 @@ six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
 tzdata==2025.2
+urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.14
 wheel==0.45.1
