--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.4",
+    "sweetalert2": "^11.26.4",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
